--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pusher": "^5.1.1-beta"
   }
 }
